test/basic/good/core012.lat
int main() {
	"asdf";
	return 0;
}
