test/basic/bad/core005.lat
int main() {
	1 + "asdf";
	!2;
	-true;
	return 0;
}
